--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -1,6 +1,6 @@
 @mixin side-padding {
-  padding-left: 4rem;
-  padding-right: 4rem;
+  padding-left: 5rem;
+  padding-right: 5rem;
 
   @media only screen and (max-width: 23.44em) {
     padding-left: 2rem;
