--- a/sass/sections/_hero.scss
+++ b/sass/sections/_hero.scss
@@ -55,7 +55,9 @@
   }
 
   &__img {
-    order: -1;
-    margin-bottom: 3rem;
+    @media only screen and (max-width: 56.25em) {
+      order: -1;
+      margin-bottom: 3rem;
+    }
   }
 }
